# age-recognize-api

./: CLAUDE.md  README.md  cache.py  example_usage.py  pyproject.toml
age_recognize/: __init__.py  cropper.py  detector.py  inference.py  matcher.py  recognizer.py  structures.py  utils.py
