[project]
name = "age_recognize"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mivolo",
    "numpy>=2.0.0",
    "omegaconf>=2.3.0",
    "pillow>=10.0.0",
    "transformers>=4.50.0",
]

[project.optional-dependencies]
torch-cpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0", 
    "torchvision>=0.15.0",
]
torch-cuda = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
]
torch-cuda118 = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
]
torch-cuda121 = [
    "torch>=2.0.0", 
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
]
torch-cuda128 = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0", 
    "torchvision>=0.15.0",
]

# ================================
# PyTorch (for development)
# ================================
[dependency-groups]
torch = [
    "torch==2.7.1+cu128",
    "torchaudio==2.7.1+cu128",
    "torchvision==0.22.1+cu128",
]

[tool.uv.sources]
mivolo = { git = "https://github.com/WildChlamydia/MiVOLO.git", rev = "714f107bb9c64fe12d82b6ed8141a800545176db" }
# PyTorch sources only for development dependency group
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
